DevOps/force-app/main/default/objects/Session__c/fields/Start_Date_Time_Plus_Delay__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Time_Plus_Delay__c</fullName>
    <formula>Start_Date_Time__c + (Start_Delay__c/1440)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date Time Plus Delay</label>
    <type>DateTime</type>
</CustomField>