DevOps/force-app/main/default/objects/Session__c/fields/Start_Delay__c.field-meta.xml
<CustomField>
    <fullName>Start_Delay__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Start Delay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>