DevOps/force-app/main/default/objects/Session__c/fields/Start_Time_as_Timezone__c.field-meta.xml
<CustomField>
    <fullName>Start_Time_as_Timezone__c</fullName>
    <description>Session Start Time in correct Timezone</description>
    <inlineHelpText>Session Start Time in correct Timezone</inlineHelpText>
    <label>Start Time as Timezone</label>
    <type>Time</type>
</CustomField>