DevOps/force-app/main/default/objects/Session__c/fields/Start_Time_as_Timezone_Text__c.field-meta.xml
<CustomField>
    <fullName>Start_Time_as_Timezone_Text__c</fullName>
    <description>Session Start Time in correct Timezone as text</description>
    <formula>IF(ISBLANK(Start_Time_as_Timezone__c),&apos;&apos;,
IF(HOUR(Start_Time_as_Timezone__c) + 10 &lt;= 12, LPAD(TEXT(HOUR(Start_Time_as_Timezone__c)), 2, &apos;0&apos;),
LPAD(TEXT(HOUR(Start_Time_as_Timezone__c) - 12), 2, &apos;0&apos;)
)
+ &apos;:&apos; + LPAD(TEXT(MINUTE(Start_Time_as_Timezone__c)), 2, &apos;0&apos;) +
IF
(HOUR(Start_Time_as_Timezone__c) &lt; 12, &apos; am&apos;, &apos; pm&apos;)
)</formula>
    <inlineHelpText>Session Start Time in correct Timezone as text</inlineHelpText>
    <label>Start Time as Timezone Text</label>
    <type>Text</type>
</CustomField>