DevOps/force-app/main/default/objects/Session__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Declined</fullName>
                <color>#F58145</color>
                <label>Declined 🟠</label>
            </value>
            <value>
                <fullName>Planning</fullName>
                <color>#6A2875</color>
                <default>true</default>
                <label>Planning 🟣</label>
            </value>
            <value>
                <fullName>Scheduled</fullName>
                <color>#0F9ED5</color>
                <label>Scheduled 🔵</label>
            </value>
            <value>
                <fullName>Confirmed</fullName>
                <color>#8AC540</color>
                <label>Confirmed 🟢</label>
            </value>
            <value>
                <fullName>Completed</fullName>
                <color>#008A10</color>
                <label>Completed ✅</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <color>#000000</color>
                <label>Cancelled ⚫</label>
            </value>
            <value>
                <fullName>No-show</fullName>
                <color>#DA2128</color>
                <label>No-show ❌</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>