DevOps/force-app/main/default/objects/Session__c/fields/Status_Emoji__c.field-meta.xml
<CustomField>
    <fullName>Status_Emoji__c</fullName>
    <formula>CASE
(
  TEXT(Status__c),
  &apos;Planning&apos;, &apos;🟤&apos;,
  &apos;Scheduled&apos;, &apos;🟡&apos;,
  &apos;Confirmed&apos;, &apos;🔵&apos;,
  &apos;Completed&apos;, &apos;✅&apos;,
  &apos;Cancelled&apos;, &apos;🔴&apos;,
  &apos;No-show&apos;, &apos;❌&apos;,
  &apos;Declined&apos;, &apos;💔&apos;,
  &apos;&apos;
)</formula>
    <label>Status Emoji</label>
    <type>Text</type>
</CustomField>