DevOps/force-app/main/default/objects/Session__c/fields/Status_with_Emoji__c.field-meta.xml
<CustomField>
    <fullName>Status_with_Emoji__c</fullName>
    <formula>TEXT(Status__c) + &apos; &apos; + Status_Emoji__c</formula>
    <label>Status.</label>
    <type>Text</type>
</CustomField>