DevOps/force-app/main/default/objects/Session__c/fields/Taking_a_support_person_to_visit__c.field-meta.xml
<CustomField>
    <fullName>Taking_a_support_person_to_visit__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Support Person is required if risks are identified</inlineHelpText>
    <label>Taking a support person to visit?</label>
    <type>Checkbox</type>
</CustomField>