DevOps/force-app/main/default/objects/Session__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <label>Time</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>