DevOps/force-app/main/default/objects/Session__c/fields/Topic_Code__c.field-meta.xml
<CustomField>
    <fullName>Topic_Code__c</fullName>
    <label>Topic Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DexTopic</valueSetName>
    </valueSet>
</CustomField>