DevOps/force-app/main/default/objects/Session__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <label>Total Cost</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>