DevOps/force-app/main/default/objects/Session__c/fields/Total_Number_of_Unidentified_Clients__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Unidentified_Clients__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Number of Unidentified Clients</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>