DevOps/force-app/main/default/objects/Session__c/fields/Total_Scores_Completed__c.field-meta.xml
<CustomField>
    <fullName>Total_Scores_Completed__c</fullName>
    <label>Total Scores Completed</label>
    <summaryForeignKey>Client_Session_Assessment__c.Session__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>