DevOps/force-app/main/default/objects/Session__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>CC - Service Contact - Type</description>
    <inlineHelpText>CC - Service Contact - Type</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>No contact took place</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Assessment</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Structured psychological intervention</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Other psychological intervention</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Clinical care coordination/liaison</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Clinical nursing services</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Child or youth specific assistance NEC</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Suicide prevention specific assistance NEC</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Cultural specific assistance NEC</label>
            </value>
            <value>
                <fullName>9</fullName>
                <default>true</default>
                <label>Psychosocial support</label>
            </value>
            <value>
                <fullName>98</fullName>
                <label>ATAPS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>