DevOps/force-app/main/default/objects/Session__c/fields/Using_a_neutral_meeting_place__c.field-meta.xml
<CustomField>
    <fullName>Using_a_neutral_meeting_place__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Using a neutral meeting place</label>
    <type>Checkbox</type>
</CustomField>