DevOps/force-app/main/default/objects/Session__c/fields/Venue__c.field-meta.xml
<CustomField>
    <fullName>Venue__c</fullName>
    <description>CC - Service Contact - Venue</description>
    <inlineHelpText>CC - Service Contact - Venue</inlineHelpText>
    <label>Venue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Client’s Home</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Service provider’s office</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>GP Practice</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Other medical practice</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Headspace Centre</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Other primary care setting</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Public or private hospital</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Residential aged care facility</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>School or other educational centre</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Client’s Workplace</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Aged care centre - non-residential</label>
            </value>
            <value>
                <fullName>98</fullName>
                <label>Not applicable (Service Contact Modality is not face to face)</label>
            </value>
            <value>
                <fullName>99</fullName>
                <label>Not stated</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>