DevOps/force-app/main/default/objects/Session__c/fields/Visit_Stage__c.field-meta.xml
<CustomField>
    <fullName>Visit_Stage__c</fullName>
    <label>Visit Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Pre Meeting Warning</fullName>
            </value>
            <value>
                <fullName>First Check In</fullName>
            </value>
            <value>
                <fullName>Worker Arrived</fullName>
            </value>
            <value>
                <fullName>Start Delayed</fullName>
            </value>
            <value>
                <fullName>Final Check In</fullName>
            </value>
            <value>
                <fullName>Finish Delayed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Buddy Escalation</fullName>
            </value>
            <value>
                <fullName>Buddy Responded</fullName>
            </value>
            <value>
                <fullName>Manager Escalation</fullName>
            </value>
            <value>
                <fullName>Meeting Concluded</fullName>
            </value>
            <value>
                <fullName>Worker Delayed</fullName>
                <isActive>false</isActive>
                <label>Worker Delayed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>