DevOps/force-app/main/default/objects/Session__c/fields/Visit_Status__c.field-meta.xml
<CustomField>
    <fullName>Visit_Status__c</fullName>
    <label>Visit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Step 1 Approval Required</fullName>
                <default>true</default>
                <label>Step 1 Approval Required</label>
            </value>
            <value>
                <fullName>Step 1 Approval Pending</fullName>
            </value>
            <value>
                <fullName>Step 1 Approved</fullName>
            </value>
            <value>
                <fullName>Step 1 Rejected</fullName>
            </value>
            <value>
                <fullName>Step 2 Approval Required</fullName>
            </value>
            <value>
                <fullName>Step 2 Approval Pending</fullName>
            </value>
            <value>
                <fullName>Step 2 Approved</fullName>
            </value>
            <value>
                <fullName>Step 2 Rejected</fullName>
            </value>
            <value>
                <fullName>Buddy Scheduled</fullName>
            </value>
            <value>
                <fullName>Visit Ongoing</fullName>
            </value>
            <value>
                <fullName>Visit Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>