DevOps/force-app/main/default/objects/Session__c/recordTypes/Case_Related.recordType-meta.xml
<RecordType>
    <fullName>Case_Related</fullName>
    <active>true</active>
    <description>A session related to an Actionable Case, and therefore also a Program</description>
    <label>Case Related</label>
</RecordType>