DevOps/force-app/main/default/objects/Session__c/recordTypes/Program_Related.recordType-meta.xml
<RecordType>
    <fullName>Program_Related</fullName>
    <active>true</active>
    <description>A session related directly to a Program, without a Case being involved.</description>
    <label>Program Related</label>
</RecordType>