DevOps/force-app/main/default/objects/Session__c/recordTypes/Safe_Space.recordType-meta.xml
<RecordType>
    <fullName>Safe_Space</fullName>
    <active>true</active>
    <label>Safe Space v2</label>
</RecordType>