DevOps/force-app/main/default/objects/Session__c/recordTypes/Safe_Space_Visit.recordType-meta.xml
<RecordType>
    <fullName>Safe_Space_Visit</fullName>
    <active>true</active>
    <label>Safe Space Visit</label>
</RecordType>