DevOps/force-app/main/default/objects/Session__c/validationRules/Buddy_Manager_must_have_mobile_number.validationRule-meta.xml
<ValidationRule>
    <fullName>Buddy_Manager_must_have_mobile_number</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK( Buddy__r.ManagerId )),ISBLANK(  Buddy__r.Manager.MobilePhone ))</errorConditionFormula>
    <errorMessage>Buddy cannot be set as they are missing a Manager or Manager mobile number</errorMessage>
</ValidationRule>