DevOps/force-app/main/default/objects/Session__c/validationRules/Buddy_Must_have_mobile_number.validationRule-meta.xml
<ValidationRule>
    <fullName>Buddy_Must_have_mobile_number</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Buddy__c)),ISBLANK( Buddy__r.MobilePhone))</errorConditionFormula>
    <errorMessage>Assigned Buddy must have a mobile number set</errorMessage>
</ValidationRule>