DevOps/force-app/main/default/objects/Session__c/validationRules/Care_Connect_CPI_NoShow.validationRule-meta.xml
<ValidationRule>
    <fullName>Care_Connect_CPI_NoShow</fullName>
    <active>true</active>
    <description>If No Show is set to &quot;Yes&quot; then Client Participation Indicator must be &quot;Yes&quot;</description>
    <errorConditionFormula>OR(CONTAINS(Program_Name__c, &quot;Care Connect&quot;), CONTAINS(Program_Name__c, &quot;Veterans Connect&quot;)) &amp;&amp;
ISPICKVAL(Status__c, &quot;Scheduled&quot;) &amp;&amp;
Start_Date_Time__c &lt;  NOW() &amp;&amp;
ISPICKVAL(No_Show__c, &quot;1&quot;) &amp;&amp; 
ISPICKVAL(Client_Participation_Indicator__c, &quot;2&quot;)</errorConditionFormula>
    <errorDisplayField>Client_Participation_Indicator__c</errorDisplayField>
    <errorMessage>If No Show is set to &quot;Yes&quot; then Client Participation Indicator must be &quot;Yes&quot;</errorMessage>
</ValidationRule>