DevOps/force-app/main/default/objects/Session__c/validationRules/Care_Connect_NoShow_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Care_Connect_NoShow_Type</fullName>
    <active>true</active>
    <description>If Type is ‘No contact took place’ then No Show must be ‘Yes’</description>
    <errorConditionFormula>OR(CONTAINS(Program_Name__c, &quot;Care Connect&quot;), CONTAINS(Program_Name__c, &quot;Veterans Connect&quot;)) &amp;&amp;
ISPICKVAL(Status__c, &quot;Scheduled&quot;) &amp;&amp;
Start_Date_Time__c &lt;  NOW() &amp;&amp;
ISPICKVAL(Type__c, &quot;0&quot;) &amp;&amp;
ISPICKVAL(No_Show__c, &quot;2&quot;)</errorConditionFormula>
    <errorDisplayField>No_Show__c</errorDisplayField>
    <errorMessage>If Type is ‘No contact took place’ then No Show must be ‘Yes’</errorMessage>
</ValidationRule>