DevOps/force-app/main/default/objects/Session__c/validationRules/CC_Modality_F2F.validationRule-meta.xml
<ValidationRule>
    <fullName>CC_Modality_F2F</fullName>
    <active>true</active>
    <description>If Modality is ‘Face to Face’, Postcode must not be 9999.</description>
    <errorConditionFormula>OR(CONTAINS(Program_Name__c, &quot;Care Connect&quot;), CONTAINS(Program_Name__c, &quot;Veterans Connect&quot;)) &amp;&amp;
ISPICKVAL(Status__c, &quot;Scheduled&quot;) &amp;&amp; 
NOT(ISPICKVAL(PRIORVALUE(Status__c), &quot;Planning&quot;)) &amp;&amp; 
Start_Date_Time__c &lt;  NOW() &amp;&amp;
ISPICKVAL(Modality__c, &quot;1&quot;) &amp;&amp;
Postcode__c == &quot;9999&quot;</errorConditionFormula>
    <errorDisplayField>Postcode__c</errorDisplayField>
    <errorMessage>If Modality is ‘Face to Face’, Postcode must not be 9999.</errorMessage>
</ValidationRule>