DevOps/force-app/main/default/objects/Session__c/validationRules/CC_Modality_Venue.validationRule-meta.xml
<ValidationRule>
    <fullName>CC_Modality_Venue</fullName>
    <active>true</active>
    <description>If Modality is ‘Face to Face’, Venue must not be ‘Not applicable (Service Contact Modality is not face to face)’</description>
    <errorConditionFormula>OR(CONTAINS(Program_Name__c, &quot;Care Connect&quot;), CONTAINS(Program_Name__c, &quot;Veterans Connect&quot;)) &amp;&amp;
ISPICKVAL(Status__c, &quot;Scheduled&quot;) &amp;&amp;
Start_Date_Time__c &lt;  NOW() &amp;&amp;
ISPICKVAL(Modality__c, &quot;1&quot;) &amp;&amp;
ISPICKVAL(Venue__c, &quot;98&quot;)</errorConditionFormula>
    <errorDisplayField>Venue__c</errorDisplayField>
    <errorMessage>If Modality is ‘Face to Face’, Venue must not be ‘Not applicable (Service Contact Modality is not face to face)’</errorMessage>
</ValidationRule>