DevOps/force-app/main/default/objects/Session__c/validationRules/Clubhouse_Community_Support.validationRule-meta.xml
<ValidationRule>
    <fullName>Clubhouse_Community_Support</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(RecordTypeId = &quot;0129s0000004IoGAAU&quot;) &amp;&amp;
ISPICKVAL(Case__r.Outlet_Activity__r.Activity__c, &quot;47302&quot;) &amp;&amp;
NOT(ISPICKVAL(Service__c, &quot;8&quot;) ||  
ISPICKVAL(Service__c, &quot;90&quot;) ||
ISPICKVAL(Service__c, &quot;3&quot;) ||
ISPICKVAL(Service__c, &quot;21&quot;) || 
ISPICKVAL(Service__c, &quot;151&quot;) ||
ISPICKVAL(Service__c, &quot;152&quot;) ||
ISPICKVAL(Service__c, &quot;2&quot;) ||
ISPICKVAL(Service__c, &quot;98&quot;))</errorConditionFormula>
    <errorDisplayField>Service__c</errorDisplayField>
    <errorMessage>This case has the Outlet Activity TEI Community Support. The Service must be: Advocacy/Support, Business Planning, Education &amp; Skills, Facilitate Employment, Indigenous Advocacy or Healing Workshops, Information/Advice/Referral, Social Participation.</errorMessage>
</ValidationRule>