DevOps/force-app/main/default/objects/Session__c/validationRules/Completed_Status_Needs_Finish_Date_Time.validationRule-meta.xml
<ValidationRule>
    <fullName>Completed_Status_Needs_Finish_Date_Time</fullName>
    <active>false</active>
    <errorConditionFormula>AND
(
  ISBLANK(Finish_Date_Time__c),
  TEXT(Status__c) = &apos;Completed&apos;
)</errorConditionFormula>
    <errorDisplayField>Finish_Date_Time__c</errorDisplayField>
    <errorMessage>Please enter the Finish Date / Time to Complete this Session</errorMessage>
</ValidationRule>