DevOps/force-app/main/default/objects/Session__c/validationRules/PMHC_Modality_NOT_F2F.validationRule-meta.xml
<ValidationRule>
    <fullName>PMHC_Modality_NOT_F2F</fullName>
    <active>true</active>
    <description>If Modality is not ‘1: Face to Face’, Postcode must be 9999.</description>
    <errorConditionFormula>AND(
    SessionPassed__c = true,
    OR(
        CONTAINS(Program_Name__c, &quot;Care Connect&quot;),
        CONTAINS(Program_Name__c, &quot;Veterans Connect&quot;),
        CONTAINS(Program_Name__c, &quot;Medicare Mental Health Centre&quot;)
    ),
    RecordTypeId &lt;&gt; &quot;0129s0000004IoG&quot;,
    NOT(ISPICKVAL(Modality__c, &quot;1&quot;)),
    NOT(Postcode__c == &quot;9999&quot;)
)</errorConditionFormula>
    <errorDisplayField>Postcode__c</errorDisplayField>
    <errorMessage>If Modality is not ‘Face to Face’, Postcode must be 9999.</errorMessage>
</ValidationRule>